--- a/package.json
+++ b/package.json
@@ -24,11 +24,28 @@
   "scripts": {
     "test": "make test"
   },
+  "dependencies": {
+    "has": "0.0.1",
+    "classic": "0.0.2"
+  },
   "devDependencies": {
     "mocha": "~1.16.2",
     "nodemon": "1.0.1",
     "sinon": "~1.7.3",
-    "has": "0.0.1",
-    "classic": "0.0.2"
+    "testling": "~1.5.6"
+  },
+  "testling": {
+    "browsers": [
+      "ie6",
+      "ie7",
+      "ie8",
+      "ie9",
+      "firefox/15",
+      "chrome/22",
+      "opera/12",
+      "safari/5.1"
+    ],
+    "harness": "mocha",
+    "files": "test/*.js"
   }
 }
